implemented injector, removed @Component from all interfaces(there's no sense on annotating interfaces as classes that are used for instance creation, because we cannot create object from interface), refactored Injector and ProductServiceImpl classes to working tests, checked it with mvn clean verify.