@@ -14,40 +14,44 @@ public class Injector {
     private static final Injector injector = new Injector();
     private final Map<Class<?>, Object> instances = new HashMap<>();
 
-    private final Map<Class<?>, Class<?>> implementations =
-            Map.of(
-                    FileReaderService.class, FileReaderServiceImpl.class,
-                    ProductService.class, ProductServiceImpl.class,
-                    ProductParser.class, ProductParserImpl.class
-            );
+    private final Map<Class<?>, Class<?>> implementations = Map.of(
+            FileReaderService.class, FileReaderServiceImpl.class,
+            ProductService.class, ProductServiceImpl.class,
+            ProductParser.class, ProductParserImpl.class
+    );
 
     public static Injector getInjector() {
         return injector;
     }
 
     public Object getInstance(Class<?> interfaceClazz) {
-        if (!interfaceClazz.isAnnotationPresent(Component.class)) {
-            throw new RuntimeException("Missing Component annotation");
-        }
         if (instances.containsKey(interfaceClazz)) {
             return instances.get(interfaceClazz);
         }
+        Class<?> implementationClazz = implementations.get(interfaceClazz);
+        if (implementationClazz == null) {
+            throw new RuntimeException("No implementation found for "
+                    + interfaceClazz.getName());
+        }
         try {
-            Object instance = implementations.get(interfaceClazz)
-                    .getDeclaredConstructor()
-                    .newInstance();
-            for (Field field : interfaceClazz.getDeclaredFields()) {
+            Object instance = implementationClazz.getDeclaredConstructor().newInstance();
+            for (Field field : implementationClazz.getDeclaredFields()) {
                 if (field.isAnnotationPresent(Inject.class)) {
-                    Object fieldInstance = getInstance(field.getType());
-                    field.setAccessible(true);
-                    field.set(instance, fieldInstance);
+                    try {
+                        Object fieldInstance = getInstance(field.getType());
+                        field.setAccessible(true);
+                        field.set(instance, fieldInstance);
+                    } catch (IllegalAccessException e) {
+                        throw new RuntimeException("Failed to set field " + field.getName()
+                                + " in class " + implementationClazz.getName(), e);
+                    }
                 }
             }
             instances.put(interfaceClazz, instance);
             return instance;
-        } catch (Exception e) {
-            throw new RuntimeException("Failed to create an instance of "
-                    + interfaceClazz.getName(), e);
+        } catch (ReflectiveOperationException e) {
+            throw new RuntimeException("Failed to create an instance of class "
+                    + implementationClazz.getName(), e);
         }
     }
 }
